SONARPY-1235 Prevent executing the same rule again in case of successful scanWithoutParsing